--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,48 @@
 @import url(https://db.onlinewebfonts.com/c/14936bb7a4b6575fd2eee80a3ab52cc2?family=Feather+Bold);
 
 :root{
+    --fuente:  'Feather Bold', sans-serif;
     --principal-color: #58cc02;
     --color-gris:  #666767;
+    --color-botones: #58a700;
+    --web-ui_button-border-radius: 12px;
+    --web-ui_button-line-height: normal;
+    --__internal__border-radius: var(--web-ui_button-border-radius, 12px);
+    --color-blanco: #ffffff;
+}
+/*Estilo de los botones*/
+button{
+    background-color: var(--principal-color);
+    box-shadow: 0 5px 0 var(--color-botones);
+    font-family: var(--fuente);
+    outline: none;
+    border-radius: var(--__internal__border-radius);
+    border: 2px solid var(--color-botones);
+    border-bottom: 6px solid var(--color-botones);
+    margin: 10px;
+    transition: all 0.1s;
+    display: inline-flex;
+    padding: 12px 16px;
+    color: var(--color-blanco);
+}
+button:active{
+    box-shadow: none;
+    transform: translateY(5px);
+}
+button:hover{
+    cursor: pointer;
 }
 
 body {
     margin: 0;
-    font-family: 'Feather Bold';
+    font-family: var(--fuente);
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ffffff;
+    background-color: var(--color-blanco);
     width: 100%;
     position: fixed;
     top: 0;
@@ -31,10 +59,25 @@ body {
     white-space: nowrap; /* Evita que el texto se rompa */
 }
 .content{
-    font-family: 'Feather Bold';
+    font-family: var(--fuente);
     color: var(--color-gris);
 }
 
 .sticky + .content {
     padding-top: 102px; 
+}
+.container{
+    background-color: var(--color-blanco);
+    padding: 10px;
+    margin-top: 20px;
+    text-align: center; 
+    display: flex;
+    align-items: center;
+}
+.text-buttons{
+    margin-left: 20px;
+}
+.container .p{
+    font-family: var(--fuente);
+    color: var(--principal-color);
 }
