comentario de mis importaciones

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /*Importaciones de internet que se usaron en la página de duolingo*/
+/*Importacion del Feather Bold como tipo de letra principal*/
 @import url(https://db.onlinewebfonts.com/c/14936bb7a4b6575fd2eee80a3ab52cc2?family=Feather+Bold);
 
 :root{
