--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,12 @@ body {
     position: fixed;
     top: 0;
     z-index: 1000;
-    transition: border-color .3s, transform .4s cubic-bezier(.22,1,.36,1);}
+    transition: border-color .3s, transform .4s cubic-bezier(.22,1,.36,1);
+    cursor: pointer;
+}
 .header img {
     width: 100px; /* ajusta el tamaño según sea necesario */
+    cursor: pointer;
 }
 #right-text {
     color: var(--color-gris);
