Obtención de las banderas del carrusel
Este proyecto es de carácter escolar por lo que los recursos utilizados para el mismo tienen derechos de autor.

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
     margin-left: auto; /* Alinear a la derecha */
     padding: 10px; /* Ajusta el padding según sea necesario */
     white-space: nowrap; /* Evita que el texto se rompa */
+    cursor: pointer;
 }
 .content{
     font-family: var(--fuente);
