--- a/styles.css
+++ b/styles.css
@@ -299,3 +299,27 @@ section {
     width: 988px;
     height: 530px;
 }
+/*Botones del scrolleable*/
+#oneBoton, #twoBoton{
+    background-color: var(--color-blanco);
+    box-shadow: 0 5px 0 var(--color-gris);
+    font-family: var(--fuente);
+    outline: none;
+    border-radius: var(--__internal__border-radius);
+    border: 2px solid var(--color-gris);
+    border-bottom: 6px solid var(--color-gris);
+    margin: 10px;
+    transition: all 0.1s;
+    display: inline-flex;
+    padding: 12px 16px;
+    color: var(--color-gris);
+    width: 330px;
+    height: 46px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+#oneBoton:active, #twoBoton:active{
+    box-shadow: none;
+    transform: translateY(5px);
+}
