--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /*Importaciones de internet que se usaron en la página de duolingo*/
 /*Importacion del Feather Bold como tipo de letra principal*/
+@import url(https://db.onlinewebfonts.com/c/ab596f21664c5582567537d241e2a53e?family=DIN+Next+Rounded+LT+W01+Regular);
 @import url(https://db.onlinewebfonts.com/c/14936bb7a4b6575fd2eee80a3ab52cc2?family=Feather+Bold);
 
 :root{
@@ -11,8 +12,9 @@
     --web-ui_button-line-height: normal;
     --__internal__border-radius: var(--web-ui_button-border-radius, 12px);
     --color-blanco: #ffffff;
-    --otra-fuente: din-round, sans-seriff;
+    --otra-fuente: 'DIN Next Rounded LT W01 Regular';
     --color-azul:  #007aff;
+    --color-duo-super: rgba(16, 15, 62);
 }
 /*Estilo del texto arriba de los botones*/
 #h1{
@@ -142,7 +144,7 @@ body {
     text-align: center; 
     display: flex;
     align-items: center;
-    height: 75vh;
+    height: 65vh;
     width: 100%;
     margin: 0;
 }
@@ -322,4 +324,49 @@ section {
 #oneBoton:active, #twoBoton:active{
     box-shadow: none;
     transform: translateY(5px);
+}
+.super{
+    background-color: var(--color-duo-super);
+}
+.animate{
+    background-color: var(--color-blanco);
+    box-shadow: 0 5px 0 var(--color-gris);
+    font-family: var(--fuente);
+    outline: none;
+    border-radius: var(--__internal__border-radius);
+    border: 2px solid var(--color-gris);
+    border-bottom: 6px solid var(--color-gris);
+    margin: 10px;
+    transition: all 0.1s;
+    display: inline-flex;
+    padding: 12px 16px;
+    color: var(--color-duo-super);
+    width: 330px;
+    height: 46px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.textoButtons{
+    font-family: var(--fuente);
+    color: var(--color-duo-super);
+}
+.button-section{
+    width: 331px;
+    height: 50px;
+    background-color: var(--color-blanco);
+    box-shadow: 0 5px 0 var(--color-gris);
+    font-family: var(--fuente);
+    outline: none;
+    border-radius: var(--__internal__border-radius);
+    border: 2px solid var(--color-gris);
+    border-bottom: 6px solid var(--color-gris);
+    margin: 10px;
+    transition: all 0.1s;
+    display: inline-flex;
+    padding: 12px 16px;
+    color: var(--color-azul);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
