--- a/styles.css
+++ b/styles.css
@@ -417,3 +417,24 @@ footer h3 {
     margin-bottom: 0;
     color: var(--h3-footer);
 }
+.last-one {
+    margin-top: 20px; /* Cambia el valor según lo que necesites */
+    background-color: var(--principal-color);
+    margin-top: -18px;
+}
+.last-one ul {
+    display: flex;
+    flex-wrap: wrap; /* Permite que los elementos de la lista se envuelvan a una nueva línea cuando no haya suficiente espacio */
+    justify-content: center; /* Centra los elementos horizontalmente */
+    padding: 0; /* Quita el relleno predeterminado */
+    list-style: none;
+}
+
+.last-one li {
+    margin: 8px 12px; /* Espacio entre los elementos */
+    cursor: pointer;
+    color: var(--ul-footer);
+}
+.last-one h2{
+    color: var(--h3-footer);
+}
