--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*Importaciones de internet que se usaron en la página de duolingo*/
 /*Importacion del Feather Bold como tipo de letra principal*/
-@import url(https://db.onlinewebfonts.com/c/ab596f21664c5582567537d241e2a53e?family=DIN+Next+Rounded+LT+W01+Regular);
 @import url(https://db.onlinewebfonts.com/c/14936bb7a4b6575fd2eee80a3ab52cc2?family=Feather+Bold);
+@import url(https://db.onlinewebfonts.com/c/ab596f21664c5582567537d241e2a53e?family=DIN+Next+Rounded+LT+W01+Regular);
 
 :root{
     --fuente:  'Feather Bold', sans-serif;
@@ -12,32 +12,19 @@
     --web-ui_button-line-height: normal;
     --__internal__border-radius: var(--web-ui_button-border-radius, 12px);
     --color-blanco: #ffffff;
-    --otra-fuente: din-round, sans-serif;
+    --otra-fuente: 'DIN Next Rounded LT W01 Regular', sans-serif;
     --color-azul:  #007aff;
     --color-duo-super: rgba(16, 15, 62);
     --h3-footer: #D7FFB8;
     --ul-footer: #A5ED6E;
+    --color-botones-enemigos: #434343;
 }
-/*Estilo del texto arriba de los botones*/
-#h1{
-    text-align: center; /* Centra horizontalmente el texto */
-    align-items: center; /* Centra verticalmente el contenido */
-    line-height: 1.5;
-    width: 480px;
-    height: 88px;
-    font-size: 32px;
-    font-family: 32px din-round, sans-serif;
-    line-height: normal;
-    flex: -1;
-    margin: 10px 0 0;
-    margin-bottom: 50px;
-    max-width: 345px;
-}
+/*Estilos globales*/
 /*Estilo de los botones*/
 button{
     background-color: var(--principal-color);
     box-shadow: 0 5px 0 var(--color-botones);
-    font-family: var(--fuente);
+    font-family: var(--otra-fuente);
     outline: none;
     border-radius: var(--__internal__border-radius);
     border: 2px solid var(--color-botones);
@@ -48,393 +35,12 @@ button{
     padding: 12px 16px;
     color: var(--color-blanco);
     text-align: center;
-}
-button:active{
-    box-shadow: none;
-    transform: translateY(5px);
-}
-button:hover{
     cursor: pointer;
 }
-#botonDos{
-    background-color: var(--color-blanco);
-    box-shadow: 0 5px 0 var(--color-gris);
-    font-family: var(--fuente);
-    outline: none;
-    border-radius: var(--__internal__border-radius);
-    border: 2px solid var(--color-gris);
-    border-bottom: 6px solid var(--color-gris);
-    margin: 10px;
-    transition: all 0.1s;
-    display: inline-flex;
-    padding: 12px 16px;
-    color: var(--color-azul);
-    width: 330px;
-    height: 46px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-#botonDos:active{
-    box-shadow: none;
-    transform: translateY(5px);
-}
-#botonUno{
-    background-color: var(--principal-color);
-    box-shadow: 0 5px 0 var(--color-botones);
-    font-family: var(--fuente);
-    outline: none;
-    border-radius: var(--__internal__border-radius);
-    border: 2px solid var(--color-botones);
-    border-bottom: 6px solid var(--color-botones);
-    margin: 10px;
-    transition: all 0.1s;
-    display: inline-flex;
-    padding: 12px 16px;
-    color: var(--color-blanco);
-    width: 330px;
-    height: 46px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    
-}
-#botonUno:active{
-    box-shadow: none;
-    transform: translateY(5px);
-}
+/*Estilos del body y header*/
 body {
     overflow-x: hidden;
     overflow-y: auto;
     margin: 0;
     font-family: var(--fuente);
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--color-blanco);
-    width: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-    transition: border-color .3s, transform .4s cubic-bezier(.22,1,.36,1);
-    cursor: pointer;
-    margin: 0 auto;
-    padding: 0;
-    height: 72px;
-}
-.header img {
-    width: 100px; /* ajusta el tamaño según sea necesario */
-    cursor: pointer;
-    height: 42px;
-    width: 179px;
-    margin-left: 224px;
-}
-#right-text {
-    color: var(--color-gris);
-    margin-left: auto; /* Alinear a la derecha */
-    padding: 10px; /* Ajusta el padding según sea necesario */
-    white-space: nowrap; /* Evita que el texto se rompa */
-    cursor: pointer;
-    position: relative;
-    margin-right: 250px;
-}
-.content{
-    font-family: var(--fuente);
-    color: var(--color-gris);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.sticky + .content {
-    padding-top: 102px; 
-}
-.container{
-    background-color: var(--color-blanco);
-    padding: 10px 15px 20px;
-    text-align: center; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 65vh;
-}
-.text-buttons{
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    align-items: center;
-    justify-content: center;
-    text-align: left;
-}
-.container img{
-    display: inline-block;
-}
-.container .p{
-    font-family: var(--fuente);
-    color: var(--principal-color);
-}
-.flags {
-    display: flex; /* Hace que los elementos dentro del contenedor se alineen en una fila */
-    align-items: center; /* Centra los elementos verticalmente dentro del contenedor */
-    border: 2px solid rgb(var(--color-gris)); /* Agrega un borde alrededor del carrusel */
-    border-radius: 8px; /* Ajusta el radio de borde según sea necesario */
-    justify-content: center; /* Centrar horizontalmente las banderas */
-    overflow: hidden; /* Ocultar las banderas que desbordan el contenedor */
-    margin-top: 130px;
-}
-
-.flecha-container {
-    display: flex;
-    justify-content: center;
-    align-items: center; /* Centra verticalmente el contenido */
-    width: calc(100% - 5px); /* Ancho del 100% menos 40px para dejar espacio para las flechas */
-    border-top: 2px solid var(--color-gris); /* Borde superior de 2px con color gris suave */
-    border-width: 8px 0; /* Ancho de borde superior e inferior de 2px */
-    border-bottom: 2px solid var(--color-gris); /* Borde inferior de 2px con color gris suave */
-    border-left: none; /* Sin borde a la izquierda */
-    border-right: none; /* Sin borde a la derecha */
-    border-radius: 8px 8px 0 0; /* Radio de borde solo en las esquinas superiores */
-    padding: 20px; /* Relleno aumentado */
-    font-size: 30px; /* Tamaño de fuente */
-}
-
-
-
-
-.flecha-izquierda,
-.flecha-derecha {
-    margin-top: calc(28.9756px - 24px); /* Ajusta el margen superior para alinear con las banderas */
-    fill: var(--color-gris); /* Color de relleno para las flechas */
-    width: 24px; /* Ancho de las flechas */
-    height: 24px; /* Alto de las flechas */
-}
-.flecha-izquierda:hover,
-.flecha-derecha:hover {
-    cursor: pointer; /* Cambiar el cursor al pasar el mouse sobre las flechas */
-}
-
-.banderas {
-    flex: 1; /* Hace que este elemento ocupe todo el espacio disponible */
-    display: flex;
-    justify-content: center;
-    align-items: center; /* Centrar verticalmente las banderas */
-    margin-left: auto; /* Empujar las banderas hacia el final del contenedor */
-    display: flex;
-    transition: transform 0.3s ease; /* Agregar transición suave al desplazamiento */
-}
-
-.banderas ul {
-    list-style-type: none; /* Quita los estilos de la lista */
-    margin: 0; /* Quita el margen predeterminado de la lista */
-    padding: 0; /* Quita el relleno predeterminado de la lista */
-}
-
-.banderas ul li {
-    display: inline-block; /* Hace que los elementos de la lista se muestren en línea */
-    margin-right: 10px; /* Espacio entre los elementos de la lista */
-    vertical-align: middle;
-}
-.banderas ul li span {
-    text-decoration: none;
-}
-.flags .banderas{
-    display: flex;
-    align-items: center; /* Centra verticalmente el contenido */
-}
-.flags .banderas ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-.flags .banderas ul li {
-    margin-right: 10px;
-    display: flex; /* Cambiamos a flex para controlar la posición de los elementos internos */
-    align-items: center; /* Centramos verticalmente los elementos */
-}
-.flags .banderas ul li a {
-    display: flex; /* Cambiamos a flex para controlar la posición de los elementos internos */
-    align-items: center; /* Centramos verticalmente los elementos */
-    color: var(--color-gris);
-    text-decoration: none !important; /* Evita que los enlaces estén subrayados */
-}
-.funny {
-    background-color: var(--color-blanco); /* Color de fondo */
-    padding: 20px; /* Espaciado interno */
-    margin-top: 20px; /* Margen superior */
-    border-radius: 8px; /* Radio de borde */
-    color: var(--principal-color);
-    display: flex; /* Utiliza un diseño flexible */
-    flex-direction: row; /* Alinea los elementos en fila (de izquierda a derecha) */
-    gap: 101px; /* Espacio entre los elementos hijos */
-    margin: 0 auto; /* Centra el contenedor en el medio de su padre */
-    width: 988px; /* Establece el ancho del contenedor */
-    align-items: center; /* Alinea los elementos verticalmente en el centro */
-}
-
-.funny img {
-    max-width: 100px; /* Establece el ancho máximo del GIF */
-}
-
-.funny h1, .funny p {
-    margin: 0; /* Elimina el margen predeterminado */
-    flex-shrink: 0; /* Evita que los elementos se reduzcan para ajustarse */
-    text-align: left; /* Restablece el texto alineado a la izquierda */
-}
-
-
-/*Debjo del header*/
-.left, .right{
-    flex-direction: row;
-    gap: 101px;
-    margin: 0 auto;
-    width: 988px;
-    padding: 0;
-    align-items: center;
-    display: flex;
-    color: var(--principal-color);
-}
-
-.right {
-    flex-direction: row-reverse;
-    margin: 0 auto; /* Añade margen para centrar */
-}
-.title-section {
-    font-size: 48px;
-    max-width: 503px;
-    font-family: var(--fuente);
-    color: var(--principal-color);
-    line-height: normal;
-    margin: 0;
-    font-weight: 700;
-}
-section {
-    margin-bottom: 20px; /* Ajusta este valor según la separación deseada */
-    width: 988px;
-    height: 530px;
-}
-.contenidoSeccion{
-    color: var(--color-gris);
-}
-/*Botones del scrolleable*/
-#oneBoton, #twoBoton{
-    background-color: var(--color-blanco);
-    box-shadow: 0 5px 0 var(--color-gris);
-    font-family: var(--fuente);
-    outline: none;
-    border-radius: var(--__internal__border-radius);
-    border: 2px solid var(--color-gris);
-    border-bottom: 6px solid var(--color-gris);
-    margin: 10px;
-    transition: all 0.1s;
-    display: inline-flex;
-    padding: 12px 16px;
-    color: var(--color-gris);
-    width: 330px;
-    height: 46px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-#oneBoton:active, #twoBoton:active{
-    box-shadow: none;
-    transform: translateY(5px);
-}
-.super{
-    background-color: var(--color-duo-super);
-}
-.animate{
-    background-color: var(--color-blanco);
-    box-shadow: 0 5px 0 var(--color-gris);
-    font-family: var(--fuente);
-    outline: none;
-    border-radius: var(--__internal__border-radius);
-    border: 2px solid var(--color-gris);
-    border-bottom: 6px solid var(--color-gris);
-    margin: 10px;
-    transition: all 0.1s;
-    display: inline-flex;
-    padding: 12px 16px;
-    color: var(--color-duo-super);
-    width: 330px;
-    height: 46px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.textoButtons{
-    font-family: var(--fuente);
-    color: var(--color-duo-super);
-}
-.button-section{
-    width: 331px;
-    height: 50px;
-    background-color: var(--color-blanco);
-    box-shadow: 0 5px 0 var(--color-gris);
-    font-family: var(--fuente);
-    outline: none;
-    border-radius: var(--__internal__border-radius);
-    border: 2px solid var(--color-gris);
-    border-bottom: 6px solid var(--color-gris);
-    margin: 10px;
-    transition: all 0.1s;
-    display: inline-flex;
-    padding: 12px 16px;
-    color: var(--color-azul);
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.textAzul{
-    text-decoration: none; /* Quitar el subrayado */
-    color: var(--color-azul); 
-}
-footer {
-    background: var(--principal-color);
-    font-family: var(--fuente);
-    text-align: center; /* Centra horizontalmente el contenido */
-    margin-top: -10px;
-}
-
-footer ul {
-    list-style: none;
-    display: inline-block; /* Alinea los elementos ul horizontalmente */
-    color: var(--ul-footer);
-    width: 178px;
-    height: 412.6px;
-    cursor: pointer;
-    vertical-align: top;
-    text-align: left;
-}
-
-footer h3 {
-    font-weight: 100;
-    margin-bottom: 0;
-    color: var(--h3-footer);
-}
-.last-one {
-    margin-top: 20px; /* Cambia el valor según lo que necesites */
-    background-color: var(--principal-color);
-    margin-top: -18px;
-}
-.last-one ul {
-    display: flex;
-    flex-wrap: wrap; /* Permite que los elementos de la lista se envuelvan a una nueva línea cuando no haya suficiente espacio */
-    justify-content: center; /* Centra los elementos horizontalmente */
-    padding: 0; /* Quita el relleno predeterminado */
-    list-style: none;
-}
-
-.last-one li {
-    margin: 8px 12px; /* Espacio entre los elementos */
-    cursor: pointer;
-    color: var(--ul-footer);
-}
-.last-one h2{
-    color: var(--h3-footer);
 }
