Arreglo del botón que cambia
No tengo nada más que decir... Estoy solo

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ button{
     color: var(--color-blanco);
     text-align: center;
     cursor: pointer;
+    font-weight: bold;
 }
 /*Estilos del body y header*/
 body {
